k8s/dp_ru.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api-a-dp
  labels:
    app: fast-api-a-dp
spec:
  replicas: 2
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
      - name: fast-api-a-cont
        image: rash77/fast-api-a:v1.0
        ports:
        - containerPort: 8000
