k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp1
spec:
 containers:
 - name: myapp1-cont
   image: rash77/fast-api-a:v1.0
   ports:
   - containerPort: 8000
