k8s/svc_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-api-a-svc
spec:
  selector:
    env: prod
  ports:
    - protocol: TCP
      port: 84
      targetPort: 8000
  type: LoadBalancer
