k8s/svc_np.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp1-svc
spec:
  selector:
    env: prod
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
